--- a/AppPundits.Parking.Tests/AppPundits.Parking.Tests.csproj
+++ b/AppPundits.Parking.Tests/AppPundits.Parking.Tests.csproj
@@ -102,9 +102,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AppPundits.Parking\AppPundits.Parking.csproj">
+    <ProjectReference Include="..\AppPundits.Parking\AppPundits.Parking.API.csproj">
       <Project>{B0AF8AA8-5A0C-41DA-AC24-C9F05FC27427}</Project>
-      <Name>AppPundits.Parking</Name>
+      <Name>AppPundits.Parking.API</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
