--- a/AppPundits.Parking/packages.config
+++ b/AppPundits.Parking/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Animate" version="1.2.22" targetFramework="net45" />
+  <package id="AngularJS.Core" version="1.2.22" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.2.22" targetFramework="net45" />
+  <package id="AngularJS.Sanitize" version="1.2.22" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="FontAwesome" version="4.1.0" targetFramework="net45" />
+  <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
@@ -31,10 +36,13 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.6.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="Spin.js" version="2.0" targetFramework="net45" />
+  <package id="toastr" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
