--- a/AppPundits.ParkingApp/package.json
+++ b/AppPundits.ParkingApp/package.json
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/buddalasunil999/AppPundits.Parking#readme",
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "browser-sync": "^2.8.2",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.3.4"
   }
 }
