--- a/AppPundits.ParkingApp/package.json
+++ b/AppPundits.ParkingApp/package.json
@@ -27,6 +27,7 @@
     "browser-sync": "^2.8.2",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4"
