working asynchronous loading of data

--- a/AppPundits.Parking/Web.config
+++ b/AppPundits.Parking/Web.config
@@ -12,7 +12,9 @@
     <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=root" providerName="MySql.Data.MySqlClient" />
     <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3001"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
