--- a/AppPundits.Parking/Web.config
+++ b/AppPundits.Parking/Web.config
@@ -13,7 +13,7 @@
     <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
-    <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3001"/>
+    <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3001" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -80,6 +80,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
