--- a/AppsPundits.Parking.API/Web.config
+++ b/AppsPundits.Parking.API/Web.config
@@ -7,13 +7,32 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
+  <log4net>
+  <!-- file appender -->
+  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+    <file value="TracingAPILog.txt"/>
+    <appendToFile value="true"/>
+    <rollingStyle value="Date"/>
+    <maxSizeRollBackups value="30"/>
+    <datePattern value=".yyyy-MM-dd"/>
+    <staticLogFileName value="true"/>
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
+    </layout>
+  </appender>
+  <root>
+    <level value="DEBUG"/>
+    <appender-ref ref="RollingFileAppender"/>
+  </root>
+</log4net>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=root" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=" providerName="MySql.Data.MySqlClient" />
     <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
-    <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3001" />
+    <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3002" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
