--- a/AppsPundits.Parking.API/Web.config
+++ b/AppsPundits.Parking.API/Web.config
@@ -28,7 +28,7 @@
   </root>
 </log4net>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=root" providerName="MySql.Data.MySqlClient" />
     <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
