--- a/AppsPundits.Parking.API/Web.config
+++ b/AppsPundits.Parking.API/Web.config
@@ -10,29 +10,32 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <log4net>
-  <!-- file appender -->
-  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="TracingAPILog.txt" />
-    <appendToFile value="true" />
-    <rollingStyle value="Date" />
-    <maxSizeRollBackups value="30" />
-    <datePattern value=".yyyy-MM-dd" />
-    <staticLogFileName value="true" />
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
-    </layout>
-  </appender>
-  <root>
-    <level value="DEBUG" />
-    <appender-ref ref="RollingFileAppender" />
-  </root>
-</log4net>
+    <!-- file appender -->
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="TracingAPILog.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <maxSizeRollBackups value="30" />
+      <datePattern value=".yyyy-MM-dd" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender" />
+    </root>
+  </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=root" providerName="MySql.Data.MySqlClient" />
     <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3002" />
+    <add key="smtphost" value="mail.buddalasunil999-001.com"/>
+    <add key="fromaddress" value="zed@appspundits.com"/>
+    <add key="fromdisplayname" value="Zed Karai"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
