--- a/AppsPundits.Parking.API/packages.config
+++ b/AppsPundits.Parking.API/packages.config
@@ -47,6 +47,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="Sendgrid" version="6.1.0" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
   <package id="Spin.js" version="2.0" targetFramework="net45" />
   <package id="Swashbuckle" version="5.0.0" targetFramework="net45" />
   <package id="Swashbuckle.Core" version="5.0.0" targetFramework="net45" />
