--- a/ParkingInfringement.API/Views/Web.config
+++ b/ParkingInfringement.API/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="AppPundits.Parking" />
+        <add namespace="ParkingInfringement.API" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
