use allowed origins all

--- a/ParkingInfringement.API/Web.config
+++ b/ParkingInfringement.API/Web.config
@@ -32,10 +32,10 @@
     <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
-    <add key="AllowedOrigins" value="http://localhost:3000,http://localhost:3002" />
+    <add key="AllowedOrigins" value="*" />
     <add key="smtphost" value="mail.buddalasunil999-001.com" />
-    <add key="fromaddress" value="zed@appspundits.com" />
-    <add key="fromdisplayname" value="Zed Karai" />
+    <add key="fromaddress" value="" />
+    <add key="fromdisplayname" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
