--- a/ParkingInfringement.API/Web.config
+++ b/ParkingInfringement.API/Web.config
@@ -29,7 +29,7 @@
   </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=root" providerName="MySql.Data.MySqlClient" />
-    <!--<add name="DefaultConnection" connectionString="server=localhost;port:3306;database=parking;user id=root;password=root;" providerName="MySql.Data.MySqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Database=sql696981;Data Source=sql6.freemysqlhosting.net;User Id=sql696981;Password=zT4%eZ2%" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="AllowedOrigins" value="*" />
