--- a/ParkingInfringement.API/Web.config
+++ b/ParkingInfringement.API/Web.config
@@ -29,7 +29,7 @@
   </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Database=parking;Data Source=127.0.0.1;User Id=root;Password=root" providerName="MySql.Data.MySqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Database=sql696981;Data Source=sql6.freemysqlhosting.net;User Id=sql696981;Password=zT4%eZ2%" providerName="MySql.Data.MySqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Database=parking;Data Source=darkblue.c1bv66ay0h6b.us-east-1.rds.amazonaws.com;User Id=root;Password=darkblue" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="AllowedOrigins" value="*" />
