--- a/ParkingInfringement.API/packages.config
+++ b/ParkingInfringement.API/packages.config
@@ -13,7 +13,6 @@
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
@@ -42,6 +41,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Moment.js" version="2.6.0" targetFramework="net45" />
+  <package id="MySql.AspNet.Identity" version="2.1.1" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
